# EchoNote

./: .gitignore  AGENTS.md  README.jp.md  README.md  README.zhs.md  README.zht.md  README_CN.md  index.html  package.json  pnpm-lock.yaml  svelte.config.js  tsconfig.json  vite.config.ts
.github/workflows/: build.yml  ios-ipa.yml
script/: android-build.sh  check_i18n.py  manage_version.py
src/: App.svelte  app.html  main.ts  styles.css
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: ai_migration.rs  ai_prefs.rs  ai_provider.rs  commands.rs  entry_service.rs  lib.rs  main.rs  models.rs  openai.rs  storage.rs
src-tauri/src/ai_provider/: claude.rs  gemini.rs  mod.rs  openai.rs
src-tauri/src/security/: crypto.rs  device.rs  mod.rs  secrets.rs
src/components/: Calendar.svelte  Calendar.ts  Editor.svelte  Editor.ts  Timeline.svelte  Timeline.ts
src/lib/components/: Calendar.svelte  Card.svelte  Editor.svelte  Timeline.svelte  Toolbar.svelte  TypewriterText.svelte
src/lib/wrappers/: CalendarHost.svelte  EditorHost.svelte  TimelineHost.svelte
src/routes/: +layout.svelte  +layout.ts  +page.svelte
src/routes/editor/: +page.svelte
src/routes/settings/: +page.svelte
src/styles/: components.scss  index.scss  layout.scss  mixins.scss  tokens.scss  utilities.scss
src/types/: index.ts
src/utils/: ai.ts  animation.ts  backend.ts  date.ts  greeting.ts  i18n.ts  state.ts  ui.ts
src/utils/i18n/locales/: en.ts  ja.ts  zh-CN.ts  zh-Hans.ts  zh-Hant.ts  zh-TW.ts
